<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MathWing</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_tab_hits">Hit</string>
    <string name="main_tab_evades">Evade</string><string name="hits_evades_focus">Focus</string>
    <string name="hits_targetlock">Target Lock</string>
    <string name="hits_attackdice">Nº of Attack Dice:</string>
    <string name="hits_number">Nº of Hits:</string>
    <string name="hits_avgnum">Average Nº of Hits:</string>
    <string name="hits_probability">Nº of Hits Probability:</string>
    <string name="evades_defensedice">Nº of Defense Dice:</string>
    <string name="evades_number">Nº of Evades:</string>
    <string name="evades_avgnum">Average Nº of Evades:</string>
    <string name="evades_probability">Nº of Evades Probability:</string>
    

</resources>
