<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewEvade"
            android:layout_width="@dimen/image_dice_width"
            android:layout_height="@dimen/image_dice_height"
            android:src="@drawable/defense_evade" />

        <ImageView
            android:id="@+id/imageViewEvadeFocus"
            android:layout_width="@dimen/image_dice_width"
            android:layout_height="@dimen/image_dice_height"
            android:src="@drawable/defense_focus" />

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_marginTop="@dimen/margin_vertical" >

        <TableRow
            android:id="@+id/tableRowNumEvades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewAvgNumEvades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/evades_avgnum"
                android:textSize="@dimen/text_big" />

            <TextView
                android:id="@+id/textViewAvgNumEvadesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="0"
                android:textSize="@dimen/text_big"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowNumEvadesProb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewNumEvadesProb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evades_probability"
                android:textSize="@dimen/text_big" />

            <TextView
                android:id="@+id/textViewNumEvadesProbValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="0"
                android:textSize="@dimen/text_big"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRowNumDefenseDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDefenseDice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/evades_defensedice"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/textViewDefenseDiceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="14dp"
                android:text="1"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBarDefensekDice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowNumEvades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewEvades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/evades_number"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/textViewEvadesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="14dp"
                android:text="1"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBarEvades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkBoxDefenseFocus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hits_evades_focus"
            android:textSize="@dimen/text_normal" />

    </LinearLayout>

</LinearLayout>